--- a/app/assets/stylesheets/header_footer.scss
+++ b/app/assets/stylesheets/header_footer.scss
@@ -1,11 +1,4 @@
-nav, footer{
-  background-color: #3683ff;
-
-  .nav-title, .navbar-toggler-icon{
-    color: white;
-    font-size: 1.5rem;
-  }
-
+footer{
   a{
     color: gray;
     font-weight: bold;
@@ -14,6 +7,16 @@ nav, footer{
   a:hover{
     color: black;
     background-color: #f8f9fa
+  }
+}
+
+nav, footer{
+  background-color: #bcbcbc;
+  font-family: "UD デジタル 教科書体 N-B","UD Digi Kyokasho N-B", sans-serif;
+
+  .nav-title, .navbar-toggler-icon{
+    color: white;
+    font-size: 1.3rem;
   }
 }
 
