--- a/app/views/homes/top.html.slim
+++ b/app/views/homes/top.html.slim
@@ -1,27 +1,22 @@
 .mb-auto
   = render 'shared/header'
 .wrapper
-  section.container.mx-auto.py-5
+  section.container.mx-auto.py-4
     .text-center.py-1
-      p.mb-1
-        = t('homes.start.app_detail')
-      h1.title-font
-        = t('defaults.app_name')
+      p.mb-3= t('homes.start.app_detail')
+      .title-font
+        = image_tag 'app_logo.png', size: '293x100'
+        h1{style='font-family: "Toppan Bunkyu Gothic","凸版文久ゴシック"'}= t('defaults.app_title')
   section.bg-light.py-5
     .text-center.py-1.text-secondary
-      h3.title-font
-        = t('homes.start.section.first')
-      h4.title-font ↓↓
+      h3= t('homes.start.section.first')
+      h4= '↓↓'
       .my-3
         a href='https://lin.ee/7nsoaaw'
           img src='https://scdn.line-apps.com/n/line_add_friends/btn/ja.png' alt=t('defaults.line_add') height='54' border='0'
       .my-1
         a href='https://lin.ee/7nsoaaw'
           img src="https://qr-official.line.me/sid/M/317ocgvp.png?shortenUrl=true" height='120'
-  section.mx-auto.py-5
-    .text-center.py-1
-      h3.title-font
-        = t('homes.start.section.second')
   section.mx-auto.py-5
     .text-center.py-1
       h3.title-font
