Add：プライバシーポリシーの作成 #46

--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -18,5 +18,5 @@ nav.navbar.navbar-dark.fixed-top.ps-3
         = link_to root_path, class: 'nav-link d-flex justify-content-end'
           = t('defaults.term')
       li.nav-item.my-1
-        = link_to root_path, class: 'nav-link d-flex justify-content-end'
+        = link_to privasy_path, class: 'nav-link d-flex justify-content-end'
           = t('defaults.policy')
