Add：お問い合わせの作成 #46

--- a/app/views/homes/privasy.html.slim
+++ b/app/views/homes/privasy.html.slim
@@ -38,7 +38,7 @@
   p 本サービスは、必要に応じて、このプライバシーポリシーの内容を変更します。この場合、変更後のプライバシーポリシーの施行時期と内容を適切な方法により周知または通知します。
 
   h4.mb-1.fw-bold お問い合わせ
-  p ご意見、ご要望、情報の訂正、利用停止、削除をご希望の場合は、#{link_to 'こちら', 'https://docs.google.com/forms/d/e/1FAIpQLSe1VbyMivs6AzlYHi26kWfKGF7E5eq7x7XQjWn8pVuycYoiCw/viewform',class: 'text-blue-600'}からお問い合わせください。
+  p ご意見、ご要望、情報の訂正、利用停止、ユーザー情報の削除をご希望の場合は、#{link_to 'こちら', 'https://docs.google.com/forms/d/e/1FAIpQLSe1VbyMivs6AzlYHi26kWfKGF7E5eq7x7XQjWn8pVuycYoiCw/viewform',class: 'text-blue-600'}からお問い合わせください。
 
   p.mt-4.mb-0 2022年5月14日 制定
 
