--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,4 +1,4 @@
-nav.navbar.navbar-dark.fixed-top.ps-3
+nav.navbar.navbar-dark.set-top.ps-3
   = link_to root_path, class: 'navbar-brand header-title'
     .d-flex.justify-content-start
       = image_tag 'app_logo_2.png', size: '41x30'
