--- a/app/views/homes/privasy.html.slim
+++ b/app/views/homes/privasy.html.slim
@@ -1,6 +1,6 @@
 .mb-auto
   = render 'shared/header'
-.container.mx-auto.px-4.py-2{ style="margin: 60px 0px 85px 0px;"}
+.container.mx-auto.px-4.py-2
   h1.text-3xl.text-center.mt-3.mb-4.fw-bold プライバシーポリシー
 
   h4.mb-1.fw-bold お客様から取得する情報
