Add：アプリの使い方ページを実装 #46

--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -9,7 +9,7 @@ nav.navbar.navbar-dark.set-top.ps-3
   .collapse.navbar-collapse.px-3 id='navbarSupportedContent'
     ul.navbar-nav.me-auto.mb-2
       li.nav-item.my-1
-        = link_to root_path, class: 'nav-link d-flex justify-content-end'
+        = link_to use_path, class: 'nav-link d-flex justify-content-end'
           = t('defaults.how_to_use')
       li.nav-item.my-1
         = link_to terms_path, class: 'nav-link d-flex justify-content-end'
