--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,8 @@
 
 body {
   background-color: #EBECED;
-  font-family: "Lucida Grande", Verdana, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "MS Pゴシック", "MS P Gothic", "Osaka", sans-serif;
+  // font-family: "Lucida Grande", Verdana, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "MS Pゴシック", "MS P Gothic", "Osaka", sans-serif;
+  font-family: "Tsukushi A Round Gothic","筑紫A丸ゴシック", sans-serif;
   color: #000
 }
 
