--- a/app/views/homes/top.html.slim
+++ b/app/views/homes/top.html.slim
@@ -5,7 +5,7 @@ section.mx-auto.py-4.bg-light
     p.mb-3= t('homes.top.app_detail')
     .title-font
       = image_tag 'app_logo.png', size: '293x100'
-      h1{style='font-family: "Toppan Bunkyu Gothic","凸版文久ゴシック"'}= t('defaults.app_title')
+      h1= t('defaults.app_title')
 section.py-5
   .text-center.py-1.text-secondary
     h3= t('homes.top.section.first')
