Add：content_forを使ったタブタイトルの設定 #46

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,3 +1,4 @@
+= content_for(:title, t('defaults.events'))
 = javascript_pack_tag 'users/show'
 
 .container.mx-auto.mt-3{ style='margin-bottom: 85px;' }
