Add：ファビコンの追加 #46

--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -13,7 +13,7 @@ nav.navbar.navbar-dark.set-top.ps-3
           = t('defaults.how_to_use')
       li.nav-item.my-1
         = link_to terms_path, class: 'nav-link d-flex justify-content-end'
-          = t('defaults.term')
+          = t('defaults.terms')
       li.nav-item.my-1
         = link_to privasy_path, class: 'nav-link d-flex justify-content-end'
           = t('defaults.policy')
