--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    = favicon_link_tag 'app_logo_3.ico'
     title
       = page_title(yield(:title))
     meta[name="viewport" content="width=device-width,initial-scale=1"]
