--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,6 +4,7 @@ html
     = favicon_link_tag 'app_logo_3.ico'
     title
       = page_title(yield(:title))
+    = display_meta_tags(default_meta_tags)
     meta[name="viewport" content="width=device-width,initial-scale=1"]
     script[charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"]
     = csrf_meta_tags
