--- a/app/views/homes/top.html.slim
+++ b/app/views/homes/top.html.slim
@@ -1,11 +1,23 @@
 .mb-auto
   = render 'shared/header'
-section.mx-auto.py-4.bg-light
+section.mx-auto.pt-4.pb-2.bg-light
   .text-center.py-1
     p.mb-3= t('homes.top.app_detail')
-    .title-font
+    .title-font.mb-4
       = image_tag 'app_logo.png', size: '293x100'
       h1= t('defaults.app_title')
+    h5.p-2=  t('homes.top.content.title')
+    .row.text-center.mx-0
+      .col-12.col-sm-6.mt-2.mb-4.align-items-center
+        h5.title-font.mb-1=  t('homes.top.content.step1')
+        p#after-border.border-bottom.border-5.w-50.mx-auto.rounded.mb-0
+        = image_tag 'content/search.png',  width: '50%'
+        p.mb-0=  t('homes.top.content.step1_text')
+      .col-12.col-sm-6.mt-2.mb-4.align-items-center
+        h5.title-font.mb-1=  t('homes.top.content.step2')
+        p#after-border.border-bottom.border-5.w-50.mx-auto.rounded.mb-0
+        = image_tag 'content/meeting.png', width: '49%'
+        p.mb-0=  t('homes.top.content.step2_text')
 
 section.py-5
   .text-center.py-1.text-secondary
@@ -17,6 +29,7 @@ section.py-5
     .my-1
       a href='https://lin.ee/7nsoaaw'
         img src="https://qr-official.line.me/sid/M/317ocgvp.png?shortenUrl=true" height='120'
+
 section.mx-auto.py-5.bg-light
   .text-center.py-2
     h2.text-muted.b-3= t('homes.top.section.second')
