Fix：デプロイ時のエラー箇所を修正

--- a/app/views/homes/use.html.slim
+++ b/app/views/homes/use.html.slim
@@ -41,7 +41,7 @@
         .col-6.col-sm-6.align-items-center
           p.small サービスページ下部にある「設定」をクリックします。
         .col-6.col-sm-6.align-items-center.mb-4
-          = image_tag 'use/setting_button', class: "rounded", width: '100%'
+          = image_tag 'use/setting_button.png', class: "rounded", width: '100%'
       .row.mb-4
         .col-6.col-sm-6.align-items-center
           p.pt-2.small ユーザー設定ページへ遷移します。
