--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -37,6 +37,7 @@
   .m-2.small.text-muted
     p= t('users.edit.account_attention')
     p= t('users.edit.count_attention')
+    p= t('users.edit.keyword_attention')
     p= t('users.edit.checked_attention')
 
 = render 'shared/after_login_footer'
