Fix：通知処理が変更したことによる文言、イラストなどを変更 #44 #46

--- a/app/views/homes/top.html.slim
+++ b/app/views/homes/top.html.slim
@@ -30,21 +30,21 @@ section.py-5
       a href='https://lin.ee/7nsoaaw'
         img src="https://qr-official.line.me/sid/M/317ocgvp.png?shortenUrl=true" height='120'
 
-section.mx-auto.py-5.bg-light
+section.mx-auto.pt-5.pb-3.bg-light
   .text-center.py-2
     h2.text-muted.b-3= t('homes.top.section.second')
     p#after-border.border-bottom.border-5.w-50.mx-auto.rounded
     .row.text-center.mx-0
       .col-12.col-sm-4.mt-2.mb-4.align-items-center
-        .rounded-circle.p-3.mb-2{style="background-color: #F3FFD8;"}= image_tag 'use/events_search.png', width: '60%'
+        .rounded-circle.p-3.mb-3{style="background-color: #F3FFD8;"}= image_tag 'use/events_search.png', width: '60%'
         h4.mb-1= t('homes.top.function.first_title')
         p.text-muted= t('homes.top.function.first_content')
       .col-12.col-sm-4.mt-2.mb-4.align-items-center
-        .rounded-circle.p-3.mb-2{style="background-color: #E6FFE9;"}= image_tag 'use/events_index.png', width: '60%'
+        .rounded-circle.p-3.mb-3{style="background-color: #E6FFE9;"}= image_tag 'use/events_index.png', width: '60%'
         h4.mb-1= t('homes.top.function.second_title')
         p.text-muted= t('homes.top.function.second_content')
       .col-12.col-sm-4.mt-2.mb-4.align-items-center
-        .rounded-circle.p-3.mb-2{style="background-color: #D7EEFF;"}= image_tag 'use/events_notice.png', width: '60%'
+        .rounded-circle.p-3.mb-3{style="background-color: #D7EEFF;"}= image_tag 'use/events_notice.png', width: '60%'
         h4.mb-1= t('homes.top.function.third_title')
         p.text-muted= t('homes.top.function.third_content')
 = render 'shared/footer'
