Fix：キーワードに関するもくもく会一覧からのログイン処理を再度修正 #9

--- a/app/views/shared/_after_login_footer.html.slim
+++ b/app/views/shared/_after_login_footer.html.slim
@@ -2,7 +2,7 @@ footer.fixed-bottom
   .d-flex.flex-nowrap.bg-white.mb-0.text
     = link_to user_path(current_user), class: "w-100 text-center py-4 #{footer_menu('show')}"
       i.fa.fa-folder-open.fa-lg.mb-0
-    = link_to users_path, class: "w-100 text-center py-4 #{footer_menu('index')}"
+    = link_to events_user_path(current_user), class: "w-100 text-center py-4 #{footer_menu('events')}"
       i.fa.fa-key.fa-lg.mb-0
     = link_to edit_user_path(current_user), class: "w-100 text-center py-4 #{footer_menu('edit')}"
       i.fa.fa-cog.fa-lg.mb-0
