--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,5 +16,10 @@ html
     script crossorigin="anonymous" src="https://kit.fontawesome.com/e1d6c1fcca.js"
     script crossorigin="anonymous" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
     script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js" type="text/javascript"
+    script[async src="https://www.googletagmanager.com/gtag/js?id=G-R7PYJLPZN4"]
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    script
+      |  window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-R7PYJLPZN4'); 
+
   body
     = yield
