--- a/app/views/layouts/_google_analytics.html.slim
+++ b/app/views/layouts/_google_analytics.html.slim
@@ -1,8 +1,8 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-script async="" src="https://www.googletagmanager.com/gtag/js?id=G-R7PYJLPZN4"
+script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-222487607-2"
 javascript:
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-R7PYJLPZN4');
+  gtag('config', 'UA-222487607-2');
